--- a/Guardian2.csproj
+++ b/Guardian2.csproj
@@ -4,7 +4,7 @@
 		<AssemblyName>me.arwent.Guardian2</AssemblyName>
 		<Product>Guardian2</Product>
 		<Description>A simple whitelist plug-in for V Rising servers.</Description>
-		<Version>2.0.0</Version>
+		<Version>2.1.0</Version>
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 		<LangVersion>latest</LangVersion>
 	</PropertyGroup>
@@ -24,8 +24,14 @@
 	  <Reference Include="ProjectM">
 	    <HintPath>..\..\unhollowed\ProjectM.dll</HintPath>
 	  </Reference>
+	  <Reference Include="ProjectM.ScriptableSystems">
+	    <HintPath>..\..\unhollowed\ProjectM.ScriptableSystems.dll</HintPath>
+	  </Reference>
 	  <Reference Include="ProjectM.Shared">
 	    <HintPath>..\..\unhollowed\ProjectM.Shared.dll</HintPath>
+	  </Reference>
+	  <Reference Include="RCONServerLib">
+	    <HintPath>..\..\unhollowed\RCONServerLib.dll</HintPath>
 	  </Reference>
 	  <Reference Include="Unity.Entities">
 	    <HintPath>..\..\unhollowed\Unity.Entities.dll</HintPath>
