--- a/Guardian2.csproj
+++ b/Guardian2.csproj
@@ -7,6 +7,7 @@
 		<Version>2.1.0</Version>
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 		<LangVersion>latest</LangVersion>
+		<UnhollowedDllPath>..\..\unhollowed</UnhollowedDllPath>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -16,31 +17,40 @@
 
 	<ItemGroup>
 	  <Reference Include="com.rlabrecque.steamworks.net">
-	    <HintPath>..\..\unhollowed\com.rlabrecque.steamworks.net.dll</HintPath>
+	    <HintPath>$(UnhollowedDllPath)\com.rlabrecque.steamworks.net.dll</HintPath>
+	    <Private>False</Private>
 	  </Reference>
 	  <Reference Include="Il2Cppmscorlib">
-	    <HintPath>..\..\unhollowed\Il2Cppmscorlib.dll</HintPath>
+	    <HintPath>$(UnhollowedDllPath)\Il2Cppmscorlib.dll</HintPath>
+	    <Private>False</Private>
 	  </Reference>
 	  <Reference Include="ProjectM">
-	    <HintPath>..\..\unhollowed\ProjectM.dll</HintPath>
+	    <HintPath>$(UnhollowedDllPath)\ProjectM.dll</HintPath>
+	    <Private>False</Private>
 	  </Reference>
 	  <Reference Include="ProjectM.ScriptableSystems">
-	    <HintPath>..\..\unhollowed\ProjectM.ScriptableSystems.dll</HintPath>
+	    <HintPath>$(UnhollowedDllPath)\ProjectM.ScriptableSystems.dll</HintPath>
+	    <Private>False</Private>
 	  </Reference>
 	  <Reference Include="ProjectM.Shared">
-	    <HintPath>..\..\unhollowed\ProjectM.Shared.dll</HintPath>
+	    <HintPath>$(UnhollowedDllPath)\ProjectM.Shared.dll</HintPath>
+	    <Private>False</Private>
 	  </Reference>
 	  <Reference Include="RCONServerLib">
-	    <HintPath>..\..\unhollowed\RCONServerLib.dll</HintPath>
+	    <HintPath>$(UnhollowedDllPath)\RCONServerLib.dll</HintPath>
+	    <Private>False</Private>
 	  </Reference>
 	  <Reference Include="Unity.Entities">
-	    <HintPath>..\..\unhollowed\Unity.Entities.dll</HintPath>
+	    <HintPath>$(UnhollowedDllPath)\Unity.Entities.dll</HintPath>
+	    <Private>False</Private>
 	  </Reference>
 	  <Reference Include="UnityEngine">
-	    <HintPath>..\..\unhollowed\UnityEngine.dll</HintPath>
+	    <HintPath>$(UnhollowedDllPath)\UnityEngine.dll</HintPath>
+	    <Private>False</Private>
 	  </Reference>
 	  <Reference Include="UnityEngine.CoreModule">
-	    <HintPath>..\..\unhollowed\UnityEngine.CoreModule.dll</HintPath>
+	    <HintPath>$(UnhollowedDllPath)\UnityEngine.CoreModule.dll</HintPath>
+	    <Private>False</Private>
 	  </Reference>
 	</ItemGroup>
 </Project>
